text is now responsive